<resources>
    <string name="app_name">My Application</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="signin">Sign in</string>
    <string name="businessname">BusinessName</string>
    <string name="country">Country</string>
    <string name="app_backpress">Press again to exit</string>
    <string name="search">Search by location,area</string>
    <string name="no_record_found">No record found</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
